# data-transformer-app

./: .checkov.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  catalog-info.yaml  docker-compose.yml  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: call-bump-version.yaml  call-pre-commit-autoupdate.yaml  call-repo-hygiene.yaml
infra/terraform/: .terraform.lock.hcl  main.tf  variables.tf
mocks/infra/terraform/: main.tf  variables.tf
mocks/us_fl/: README.md
mocks/us_fl/config/: config.yaml  sftp_config.yaml
mocks/us_fl/test_cases/basic/: __init__.py  expectation.py  prepare.py
src/data_transformer_app/: __init__.py  app_config.py  health.py  lambda_handler.py  main.py
src/data_transformer_core/: __init__.py  config.py  core.py  engine.py  exceptions.py  lambda_handler.py  logging.py  oc_strategies.py  strategy_registration.py  strategy_types.py  transformer.py  us_fl_strategies.py
stubs/: README.md  __init__.py
tests/: __init__.py  conftest.py
tests/shims/: __init__.py
tests/test_functional/: __init__.py  test_health_functional.py
tests/test_integration/: __init__.py
tests/test_integration/data_fetcher_core/: README.md  __init__.py  test_kv_store_integration.py
tests/test_integration/data_transformer_core/: test_config_integration.py  test_kv_store_integration.py
tests/test_unit/: __init__.py  test_transformer.py
tests/test_unit/data_transformer_app/: __init__.py  test_cli.py  test_health.py  test_main.py
tests/test_unit/data_transformer_core/: __init__.py  test_core.py
